--- a/slides/1017scg/week-02.html
+++ b/slides/1017scg/week-02.html
@@ -641,7 +641,7 @@
 
 					<table style="width: 100%;">
 						<tr>
-							<td style="width: 50%;"  class="fragment" data-fragment-index="2">
+							<td style="width: 50%;" class="fragment" data-fragment-index="2">
 								<iframe scrolling="no" title="Pythagoras theorem"
 									src="https://www.geogebra.org/material/iframe/id/fjcpy5b7/width/360/height/358/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false"
 									width="360px" height="358px" style="border:0px;" allowfullscreen> </iframe>
@@ -805,9 +805,111 @@
 				</section>
 
 
+			</section>
+
+			<section>
+				<section>
+					<h3>sin / cos / tan &nbsp; ratios</h3>
+					<div>
+						<iframe scrolling="no" title="Ratios on a triangle"
+							src="https://www.geogebra.org/material/iframe/id/krvdetpr/width/509/height/375/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false"
+							width="509px" height="375px" style="border:0px;" allowfullscreen> </iframe>
+					</div>
+
+					<div>
+						<p>
+							<span class="fragment" data-fragment-index="4">
+								\(\sin \theta = \)
+							</span>
+							<span class="fragment" data-fragment-index="0">
+								\(\dfrac{BC}{AC}\)
+							</span>
+							<span class="fragment" data-fragment-index="3">
+								\(=\)
+							</span>
+							<span class="fragment" data-fragment-index="1">
+								\(\dfrac{DE}{AE}\)
+							</span>
+							<span class="fragment" data-fragment-index="3">
+								\(=\)
+							</span>
+							<span class="fragment" data-fragment-index="2">
+								\(\dfrac{FG}{AG}\)
+							</span>
+						</p>
+					</div>
+					<br />
+				</section>
+
+				<section data-auto-animate="">
+					<h3>sin / cos / tan &nbsp; ratios</h3>
+					<div>
+						<img style="width: 500px;" src="images/week-02/ratios-02.png">
+					</div>
+
+
+					<br />
+				</section>
+				<section data-auto-animate="">
+					<h3>sin / cos / tan &nbsp; ratios</h3>
+
+					<table>
+						<tr>
+							<td>
+								<img style="width: 500px;" src="images/week-02/ratios-02.png">
+							</td>
+							<td>
+								<img style="width: 500px;" src="images/week-02/ratios-03.png">
+							</td>
+						</tr>
+					</table>
 
 
 
+					<br />
+				</section>
+
+				<section data-auto-animate="">
+					<h3>sin / cos / tan &nbsp; ratios</h3>
+
+					<table>
+
+						<tr>
+							<td>
+								<table>
+									<tr>
+										<td>
+											<img style="width: 400px;" src="images/week-02/ratios-02.png">
+										</td>
+
+									</tr>
+									<tr>
+
+										<td>
+											<img style="width: 400px;" src="images/week-02/ratios-03.png">
+										</td>
+									</tr>
+
+								</table>
+							</td>
+							<td>
+								<p class="fragment" data-fragment-index="1">
+									\(\sin\left(\theta \right) = \dfrac{\text{opposite}}{\text{hypotenuse}}\)
+								</p>
+								<p class="fragment" data-fragment-index="2">
+									\(\cos\left(\theta \right) = \dfrac{\text{adjacent}}{\text{hypotenuse}}\)
+								</p>
+								<p class="fragment" data-fragment-index="3">
+									\(\tan\left(\theta \right) = \dfrac{\text{opposite}}{\text{adjacent}}\)
+								</p>
+							</td>
+						</tr>
+					</table>
+
+
+
+					<br />
+				</section>
 			</section>
 
 			<section>
