--- a/slides/1017scg/week-02.html
+++ b/slides/1017scg/week-02.html
@@ -905,11 +905,118 @@
 							</td>
 						</tr>
 					</table>
+					<br />
+				</section>
 
+				<section>
+					<h3>Examples</h3>
 
+					<table style="width: 100%;">
+
+						<tr>
+							<td>
+								<table>
+									<tr>
+										<td>
+											<img style="width: 350px;" src="images/week-02/ratios-04.png">
+										</td>
+
+									</tr>
+									<tr>
+
+										<td>
+
+										</td>
+									</tr>
+
+								</table>
+							</td>
+							<td>
+
+								<div class="size-70">
+									<p class="fragment" data-fragment-index="2">
+										\(\cos\left(\theta \right) = \dfrac{\text{adjacent}}{\text{hypotenuse}}\)
+									</p>
+									<p class="fragment" data-fragment-index="3">
+										\(\cos\left(50^{\circ} \right) = \dfrac{10 }{y}\)
+									</p>
+									<p class="fragment" data-fragment-index="4">
+										\(\cos\left(50^{\circ} \right) \times y= \dfrac{10 }{y}\times y\)
+									</p>
+									<p class="fragment" data-fragment-index="5">
+										\(\cos\left(50^{\circ} \right) \times y=10 \)
+									</p>
+									<p class="fragment" data-fragment-index="6">
+										\(\dfrac{\cos\left(50^{\circ} \right) \times y}{\cos\left(50^{\circ} \right)
+										}=\dfrac{10 }{\cos\left(50^{\circ} \right)}\)
+									</p>
+									<p class="fragment" data-fragment-index="7">
+										Hence \( y=\dfrac{10 }{\cos\left(50^{\circ} \right)}\)
+										<span class="fragment" data-fragment-index="8">
+											\(\approx 15.56\) cm
+										</span>
+									</p>
+								</div>
+							</td>
+						</tr>
+					</table>
 
 					<br />
 				</section>
+
+				<section>
+					<h3>Examples</h3>
+
+					<table style="width: 100%;">
+
+						<tr>
+							<td>
+								<table>
+									<tr>
+										<td>
+											<img style="width: 350px;" src="images/week-02/ratios-05.png">
+										</td>
+
+									</tr>
+									<tr>
+
+										<td>
+
+										</td>
+									</tr>
+
+								</table>
+							</td>
+							<td>
+
+								<div class="size-75">
+									<p class="fragment" data-fragment-index="2">
+										\(\sin\left(\theta \right) = \dfrac{\text{opposite}}{\text{hypotenuse}}\)
+									</p>
+									<p class="fragment" data-fragment-index="3">
+										\(\sin\left(30^{\circ} \right) = \dfrac{x}{5}\)
+									</p>
+									<p class="fragment" data-fragment-index="4">
+										Find $x$ <br>
+										<picture>
+											<source
+												srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/270f_fe0f/512.webp"
+												type="image/webp">
+											<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/270f_fe0f/512.gif"
+												alt="✏" width="64" height="64">
+										</picture>
+										
+									</p>
+
+								</div>
+							</td>
+						</tr>
+					</table>
+
+					<br />
+				</section>
+
+
 			</section>
 
 			<section>
