--- a/slides/1017scg/week-02.html
+++ b/slides/1017scg/week-02.html
@@ -909,7 +909,7 @@
 				</section>
 
 				<section>
-					<h3>Examples</h3>
+					<h3>Examples: Find the hypotenuse</h3>
 
 					<table style="width: 100%;">
 
@@ -965,7 +965,7 @@
 				</section>
 
 				<section>
-					<h3>Examples</h3>
+					<h3>Examples: Find a side</h3>
 
 					<table style="width: 100%;">
 
@@ -1006,6 +1006,56 @@
 												alt="✏" width="64" height="64">
 										</picture>
 										
+									</p>
+
+								</div>
+							</td>
+						</tr>
+					</table>
+
+					<br />
+				</section>
+
+				<section>
+					<h3>Examples: Find an angle</h3>
+
+					<table style="width: 100%;">
+
+						<tr>
+							<td>
+								<table>
+									<tr>
+										<td>
+											<img style="width: 350px;" src="images/week-02/ratios-06.png">
+										</td>
+
+									</tr>
+									<tr>
+
+										<td>
+
+										</td>
+									</tr>
+
+								</table>
+							</td>
+							<td>
+
+								<div class="size-75">
+									<p class="fragment" data-fragment-index="2">
+										\(\cos\left(\theta \right) = \dfrac{\text{adjacent}}{\text{hypotenuse}}\)
+									</p>
+									<p class="fragment" data-fragment-index="3">
+										\(\cos\left(\theta \right) = \dfrac{5}{12}\)
+									</p>
+									<p class="fragment" data-fragment-index="4">
+										\(\theta= \cos^{-1}\left(\dfrac{5}{12}\right)\)
+									</p>
+									<p class="fragment" data-fragment-index="5">
+										\(\theta= \arccos\left(\dfrac{5}{12}\right)\)
+									</p>
+									<p class="fragment" data-fragment-index="6">
+										Hence \(\theta\approx 65.38^{\circ}\)
 									</p>
 
 								</div>
