--- a/slides/2201nsc/index.html
+++ b/slides/2201nsc/index.html
@@ -58,7 +58,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 
 			<section>
-				<h3 style="font-size:95%">1017SCG Foundation Mathematics</h3>
+				<h3 style="font-size:95%">2201NSC Linear Algebra & Applications</h3>
 				<div style="font-size:59%;text-align:left">
 					<table style="width: 100%;">
 						<tr>
