--- a/slides/1017scg/week-02.html
+++ b/slides/1017scg/week-02.html
@@ -113,35 +113,35 @@
 
 				<div class="left-txt size-75">
 					<ul style="line-height: 55px;">
-						<li class="fragment" data-fragment-index="0">
+						<li>
 							Logarithms
 
 							<ul>
-								<li class="fragment" data-fragment-index="2">
+								<li>
 									Introduction to logarithms
 								</li>
-								<li class="fragment" data-fragment-index="3">
+								<li>
 									Evaluating basic logarithms without a calculator
 								</li>
-								<li class="fragment" data-fragment-index="4">
+								<li>
 									Logarithm laws (commonly known as log laws)
 								</li>
-								<li class="fragment" data-fragment-index="5">
+								<li>
 									Change of base rule
 								</li>
 
 							</ul>
 						</li>
-						<li class="fragment" data-fragment-index="6">
+						<li>
 							Triangles
 							<ul>
-								<li class="fragment" data-fragment-index="7">
+								<li>
 									Pythagoras' theorem
 								</li>
-								<li class="fragment" data-fragment-index="8">
+								<li>
 									$\sin$/$\cos$/$\tan$ ratios
 								</li>
-								<li class="fragment" data-fragment-index="9">
+								<li>
 									Sine and Cosine rules
 								</li>
 							</ul>
@@ -793,7 +793,7 @@
 				</section>
 
 
-				<section>
+				<section data-visibility="hidden">
 					<h3>Practice! 📝</h3>
 
 					<div class="left-txt size-95">
@@ -874,7 +874,7 @@
 									width="360px" height="358px" style="border:0px;" allowfullscreen> </iframe>
 							</td>
 							<td style="width: 50%;" class="fragment" data-fragment-index="3">
-								<img src="images/week-02/pythagoras-notation.png">
+								<img width="100%" src="images/week-02/pythagoras-notation.png">
 
 							</td>
 						</tr>
@@ -948,7 +948,7 @@
 								<img class="fragment" data-fragment-index="3" style="width: 320px;"
 									src="images/week-02/chinese_pythagoras.jpg">
 								<p class="size-60 fragment" data-fragment-index="3">
-									Geometric proof of the Pythagorean from roughly the 1st century BC.
+									Geometric Chinese proof of the Pythagorean from roughly the 1st century BC.
 								</p>
 							</td>
 						</tr>
@@ -1419,7 +1419,7 @@
 										\(\dfrac{\sin (50^{\circ})}{10} \times 4=\dfrac{\sin (C)}{4} \times 4\)
 									</p>
 									<p class="fragment" data-fragment-index="7">
-										\(0.3064 \approx \sin (C)\)
+										\(0.3064 = \sin (C)\)
 									</p>
 									<p class="fragment" data-fragment-index="8">
 										\(C = \sin^{-1}(0.3064)\)
@@ -1527,10 +1527,10 @@
 										</span>
 									</p>
 									<p class="fragment" data-fragment-index="8">
-										\(c^2 \approx 329.96\)
+										\(c^2 = 329.96\)
 									</p>
 									<p class="fragment" data-fragment-index="9">
-										\(c \approx \sqrt{329.96}\)
+										\(c = \sqrt{329.96}\)
 									</p>
 									<p class="fragment" data-fragment-index="10">
 										\(c \approx 18.16\text{m}\)
