--- a/slides/1017scg/week-02.html
+++ b/slides/1017scg/week-02.html
@@ -1033,7 +1033,7 @@
 						</p>
 						<p class="fragment" data-fragment-index="7">
 							$
-							c = \sqrt{144}
+							b = \sqrt{144}
 							$
 							<span class="fragment" data-fragment-index="8">
 								$ = 12$
