--- a/slides/2201nsc/index.html
+++ b/slides/2201nsc/index.html
@@ -105,7 +105,7 @@
 
 							<td>
 
-								&#8226; <a href="pond.html" target="_blank">Coming soon!</a><br />
+								&#8226; <a href="rule-of-sarrus.html" target="_blank">Rule of Sarrus</a><br />
 
 
 							</td>
