--- a/slides/2201nsc/index.html
+++ b/slides/2201nsc/index.html
@@ -105,8 +105,8 @@
 
 							<td>
 
+								&#8226; <a href="https://www.dynamicmath.xyz/linearalgebra/multmatrix/" target="_blank">Matrix multiplication</a><br />
 								&#8226; <a href="rule-of-sarrus.html" target="_blank">Rule of Sarrus</a><br />
-
 
 							</td>
 
