--- a/slides/1017scg/pythagoras-geometric-proof.html
+++ b/slides/1017scg/pythagoras-geometric-proof.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>1017SCG - Table of contents</title>
+	<title>Pythagoras Theorem: Proof without words</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -57,72 +57,19 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 
-			<section>
-				<h3 style="font-size:95%">1017SCG Foundation Mathematics</h3>
-				<div style="font-size:59%;text-align:left">
-					<table style="width: 100%;">
-						<tr>
+			<section data-auto-animate>
+				<h4>Pythagoras Theorem: Proof without words</h4>
+				<div>
 
-							<th colspan="2" style="text-align: center;width: 45%;">Lectures</th>
-							<th style="text-align: center;width: 55%;">Extras &amp; Applets</th>
-						</tr>
-						<tr class="toc">
-
-							<td>
-
-								<!--<a href="week-00.html" target="_blank">Week 0</a><br />-->
-								<a href="week-01.html" target="_blank">Week 1</a><br />
-								<a href="week-02.html" target="_blank">Week 2</a><br />
-								<a href="music.html" target="_blank">Week 3 ❌</a><br />
-								<a href="pond.html" target="_blank">Week 4 ❌</a><br />
-								<a href="music.html" target="_blank">Week 5 ❌</a><br />
-								<a href="monkey.html" target="_blank">Week 6 ❌</a><br />
-
-
-
-							</td>
-
-							<td>
-								<a href="monkey.html" target="_blank">Week 7 ❌</a><br />
-								<a href="pond.html" target="_blank">Week 8 ❌</a><br />
-								<a href="pond.html" target="_blank">Week 9 ❌</a><br />
-								<a href="pond.html" target="_blank">Week 10 ❌</a><br />
-								<a href="music.html" target="_blank">Week 11 ❌</a><br />
-								<a href="monkey.html" target="_blank">Week 12 ❌</a><br />
-
-								<br />
-								<br />
-
-								<picture>
-									<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f422/512.webp"
-										type="image/webp">
-									<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f422/512.gif" alt="🐢"
-										width="45" height="45">
-								</picture>
-
-							</td>
-
-
-							<td>
-
-								&#8226; <a href="pythagoras-geometric-proof.html" target="_blank">Pythagoras Theorem</a><br />
-
-
-							</td>
-
-
-						</tr>
-
-					</table>
+					<iframe scrolling="no" title="Pythagoras Theorem: Proof without words" src="https://www.geogebra.org/material/iframe/id/a7vcmvya/width/563/height/508/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/true/rc/false/ld/false/sdz/false/ctl/false" width="563px" height="508px" style="border:0px;" allowfullscreen> </iframe>
 
 				</div>
-
-
-
+				<div style="font-size:40%;margin-top:-10px">
+					<p><a href="https://www.geogebra.org/m/reqftvxk" target="_blank">Source <i
+								class="fa fa-external-link-alt"></i></a></p>
+				</div>
 				<br />
 			</section>
-
-
 
 			<!-- Ends sections -->
 
@@ -142,6 +89,7 @@
 	<script>
 		includeHTML();
 	</script>
+
 
 </body>
 
