--- a/slides/1017scg/week-03.html
+++ b/slides/1017scg/week-03.html
@@ -76,38 +76,59 @@
 				</h2>
 
 				<br />
-				<p style="margin-top: 50px;">Course Introduction
+				<p style="margin-top: 50px;">Week 3
 				</p>
 				<br /><br />
 			</section>
 
 			<section>
-				<h3>Foundation Mathematics</h3>
-
-				<br />
-				<p style="font-size: 120%;margin-bottom: 50px;">
-					Welcome!
-				</p>
-
-
-
-				<div class="size-80">
-
-					<p class="fragment" data-fragment-index="0">
-						<span class="fragment custom emph">Convenor:</span>
-						<span>Juan Carlos Ponce Campuzano</span>
-					</p>
-
-
-				</div>
+				<h3>
+					Topics for Week 3
+				</h3>
 
 				<br />
 
-				<div>
-					<img style="width: 50px;" src="images/Griffith-logo-black-book.png">
+				<div class="left-txt size-85">
+					<ul style="line-height: 60px;">
+						<li>
+							Radians
+						</li>
+						<li>
+							Special Triangles
+						</li>
+						<li>
+							Unit Circle
+						</li>
+					</ul>
+
 				</div>
 
 
+				<br />
+				<br />
+			</section>
+
+
+			<section>
+				<h3>Radians</h3>
+
+				<img src="images/week-03/Circle_radians.gif">
+
+				<div style="font-size:40%;margin-top:-10px">
+					<p>By <a href="https://en.wikipedia.org/wiki/File:Circle_radians.gif" target="_blank">Lucas Vieira <i
+								class="fa fa-external-link-alt"></i></a></p>
+				</div>
+			</section>
+
+			<section>
+				<h3>Radians</h3>
+
+				<img src="images/week-03/Circle_radians.gif">
+
+				<div style="font-size:40%;margin-top:-10px">
+					<p>By <a href="https://en.wikipedia.org/wiki/File:Circle_radians.gif" target="_blank">Lucas Vieira <i
+								class="fa fa-external-link-alt"></i></a></p>
+				</div>
 			</section>
 
 
