--- a/slides/1017scg/week-03.html
+++ b/slides/1017scg/week-03.html
@@ -546,7 +546,7 @@
 						</p>
 
 						<p class="fragment" data-fragment-index="3">
-							\(\qquad \qquad  =120^{\circ}\;\)
+							\(\qquad \qquad =120^{\circ}\;\)
 						</p>
 					</div>
 
@@ -567,15 +567,15 @@
 
 					<div>
 						<p>
-							
+
 							<span class="fragment" data-fragment-index="0">
 								\( \dfrac{3\pi}{4} \times \dfrac{180}{\pi} \)
 							</span>
 							<span class="fragment" data-fragment-index="1">
-							\(  = \dfrac{540}{4}\)
+								\( = \dfrac{540}{4}\)
 							</span>
 						</p>
-						
+
 						<p class="fragment" data-fragment-index="3">
 							\(\qquad \qquad\; =135^{\circ}\;\)
 						</p>
@@ -587,6 +587,57 @@
 
 
 					<br />
+					<br />
+				</section>
+
+				<section>
+					<h3>Common notation</h3>
+
+					<div class="size-80">
+
+						<table>
+							<tr>
+								<td style="text-align: center;">
+									Degrees
+								</td>
+								<td style="text-align: center;">
+									Radians
+								</td>
+							</tr>
+							<tr>
+								<td class="fragment" data-fragment-index="0">
+									<ul style="line-height: 80px;">
+										<li>
+											\(30\;\text{degrees}\)
+										</li>
+										<li>
+											\(30\;\text{deg}\)
+										</li>
+										<li>
+											\(30^{\circ}\)
+										</li>
+									</ul>
+								</td>
+								<td class="fragment" data-fragment-index="1">
+									<ul style="line-height: 90px;">
+										<li>
+											\(\dfrac{\pi}{6}\;\text{radians}\)
+										</li>
+										<li>
+											\(\dfrac{\pi}{6}\;\text{rad}\)
+										</li>
+										<li>
+											\(\dfrac{\pi}{6}\)
+										</li>
+									</ul>
+
+								</td>
+							</tr>
+						</table>
+
+
+
+					</div>
 					<br />
 				</section>
 
