--- a/slides/1017scg/week-03.html
+++ b/slides/1017scg/week-03.html
@@ -644,6 +644,41 @@
 
 			</section>
 
+			<section>
+				<section>
+					<h3>Special Triangles</h3>
+
+					<table style="width: 100%;">
+						<tr>
+							<td style="width: 50%;" class="fragment" data-fragment-index="0">
+								<img src="images/week-03/special-triangles-01-degrees.png">
+
+							</td>
+							<td style="width: 50%;" class="fragment" data-fragment-index="1">
+								<img src="images/week-03/special-triangles-01-radians.png">
+
+							</td>
+						</tr>
+					</table>
+				</section>
+				<section>
+					<h3>Special Triangles</h3>
+
+					<table style="width: 100%;">
+						<tr>
+							<td style="width: 50%;">
+								<img src="images/week-03/special-triangles-02-degrees.png">
+
+							</td>
+							<td style="width: 50%;">
+								<img src="images/week-03/special-triangles-02-radians.png">
+
+							</td>
+						</tr>
+					</table>
+				</section>
+			</section>
+
 
 
 
