--- a/slides/1017scg/week-03.html
+++ b/slides/1017scg/week-03.html
@@ -677,6 +677,134 @@
 						</tr>
 					</table>
 				</section>
+
+				<section>
+					<h3>Special Triangles</h3>
+
+					<table style="width: 100%;">
+						<tr>
+							<td style="width: 30%;">
+								<img src="images/week-03/special-triangles-02-degrees.png">
+
+							</td>
+							<td style="width: 30%;">
+								<img src="images/week-03/special-triangles-02-radians.png">
+
+							</td>
+							<td style="width: 40%; font-size: 85%;">
+								<p class="fragment" data-fragment-index="0">
+									\(\sin \left(30^{\circ }\right)\)
+									<span class="fragment" data-fragment-index="1">
+										\(=\dfrac{1}{2}\)
+									</span>
+								</p>
+								<p class="fragment" data-fragment-index="2">
+									\(\cos \left(30^{\circ }\right)\)
+									<span class="fragment" data-fragment-index="3">
+										\(=\dfrac{\sqrt{3}}{2}\)
+									</span>
+								</p>
+								<p class="fragment" data-fragment-index="4">
+									\(\tan \left(30^{\circ }\right)\)
+									<span  class="fragment" data-fragment-index="5">
+										\(=\dfrac{1}{\sqrt{3}}\)
+									</span>
+								</p>
+							</td>
+						</tr>
+					</table>
+
+					<div class="size-80">
+						<p class="fragment" data-fragment-index="6">
+							\(\sin \left(\dfrac{\pi}{3}\right)\)
+							<span  class="fragment" data-fragment-index="7">
+								\(=\dfrac{\sqrt{3}}{2},\;\;\)
+							</span>
+							<span  class="fragment" data-fragment-index="8">
+								\(\cos \left(\dfrac{\pi}{3}\right)\)
+							</span>
+							<span class="fragment" data-fragment-index="9">
+								\(= \dfrac{1}{2},\;\;\)
+							</span>
+							<span  class="fragment" data-fragment-index="10">
+								\(\tan \left(\dfrac{\pi}{3}\right)\)
+							</span>
+							<span  class="fragment" data-fragment-index="11">
+								\(= \dfrac{\sqrt{3}}{1}\)
+							</span>
+						</p>
+					</div>
+					<br />
+				</section>
+				<section>
+					<h3>Special Triangles</h3>
+
+					<table style="width: 100%;">
+						<tr>
+							<td style="width: 30%;">
+								<img src="images/week-03/special-triangles-01-degrees.png">
+
+							</td>
+							<td style="width: 30%;">
+								<img src="images/week-03/special-triangles-01-radians.png">
+
+							</td>
+							<td style="width: 40%; font-size: 85%;">
+								<p class="fragment" data-fragment-index="0">
+									\(\sin \left(\dfrac{\pi}{2}\right)\)
+									<span class="fragment" data-fragment-index="1">
+										\(=\dfrac{1}{\sqrt{2}}\)
+									</span>
+								</p>
+								<p class="fragment" data-fragment-index="2">
+									\(\cos \left(\dfrac{\pi}{2}\right)\)
+									<span  class="fragment" data-fragment-index="3">
+										\(=\dfrac{1}{\sqrt{2}}\)
+									</span>
+								</p>
+								<p class="fragment" data-fragment-index="4">
+									\(\tan \left(\dfrac{\pi}{2}\right)\)
+									<span  class="fragment" data-fragment-index="5">
+										\(=\dfrac{1}{1} \)
+									</span>
+								</p>
+							</td>
+						</tr>
+					</table>
+				
+					<br />
+					<br />
+					<br />
+				</section>
+
+				<section>
+					<h3>Special Triangles</h3>
+
+					<table style="width: 65%;border: none;">
+						<tr>
+							<td style="width: 50%; text-align: center;border: none;">
+								<img style="width: 200px;" src="images/week-03/special-triangles-01-degrees.png">
+
+							</td>
+							<td style="width: 50%; text-align: center;border: none;">
+								<img style="width: 200px;" src="images/week-03/special-triangles-01-radians.png">
+
+							</td>
+						</tr>
+						<tr>
+							<td style="width: 50%; text-align: center;">
+								<img style="width: 230px;"  src="images/week-03/special-triangles-02-degrees.png">
+
+							</td>
+							<td style="width: 50%; text-align: center;">
+								<img style="width: 230px;" src="images/week-03/special-triangles-02-radians.png">
+
+							</td>
+						</tr>
+					</table>
+					<br/>
+				</section>
+
 			</section>
 
 
