--- a/slides/1017scg/week-03.html
+++ b/slides/1017scg/week-03.html
@@ -815,7 +815,7 @@
 				<section>
 					<h3>Special Triangles</h3>
 
-					<div class="">
+					<div class="size-90">
 						<p> But what if the angle is something other than <br/>30, 45, or 60 degrees?</p>
 					</div>
 
@@ -823,8 +823,8 @@
 						<picture>
 							<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f914/512.webp"
 								type="image/webp">
-							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f914/512.gif" alt="🤔" width="250"
-								height="250">
+							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f914/512.gif" alt="🤔" width="220"
+								height="220">
 						</picture>
 					</div>
 
