--- a/slides/1017scg/index.html
+++ b/slides/1017scg/index.html
@@ -73,7 +73,7 @@
 								<!--<a href="week-00.html" target="_blank">Week 0</a><br />-->
 								<a href="week-01.html" target="_blank">Week 1</a><br />
 								<a href="week-02.html" target="_blank">Week 2</a><br />
-								<a href="music.html" target="_blank">Week 3 ❌</a><br />
+								<a href="week-03.html" target="_blank">Week 3</a><br />
 								<a href="pond.html" target="_blank">Week 4 ❌</a><br />
 								<a href="music.html" target="_blank">Week 5 ❌</a><br />
 								<a href="monkey.html" target="_blank">Week 6 ❌</a><br />
