--- a/slides/1017scg/week-03.html
+++ b/slides/1017scg/week-03.html
@@ -968,6 +968,24 @@
 
 			</section>
 
+			<section>
+				<h3>What is next?</h3>
+
+				<div class="left-txt size-80">
+					<ul>
+						<li class="fragment" data-fragment-index="0">Watch the fifth video on Canvas site. 
+							<br/>Topic: "Like and Unlike Terms"</li>
+						<li class="fragment" data-fragment-index="1">Prepare for Progress Test 1.</li>
+						<li class="fragment" data-fragment-index="2">Watch the week 4 video content before your scheduled week 4 workshop.</li>
+					</ul>
+				</div>
+				<br/>
+
+				<iframe style="width:800px;height: 200px;border: none;" src="sketches/sectors-waves/"></iframe>
+				<br/>
+				<br/>
+			</section>
+
 
 
 			<!-- Ends sections -->
