--- a/slides/1017scg/week-03.html
+++ b/slides/1017scg/week-03.html
@@ -986,6 +986,12 @@
 				<br/>
 			</section>
 
+			<section>
+
+				<h4>Credits</h4>
+				<div include-html="credits.html"></div>
+			</section>
+
 
 
 			<!-- Ends sections -->
