--- a/slides/1017scg/week-03.html
+++ b/slides/1017scg/week-03.html
@@ -960,8 +960,40 @@
 				<section data-auto-animate>
 					<h3>The Unit Circle</h3>
 
-					<div style="margin-top: -40px;">
-						<img style="width: 600px;" src="images/week-03/Unit_circle_angles.svg">
+					<div class="r-stack" style="width: 700px;text-align: center;">
+						<img  class="fragment fade-out" data-fragment-index="0"  src="images/week-03/unit-30a.png">
+						<img  class="fragment fade-in-then-out" data-fragment-index="0" src="images/week-03/unit-30b.png">
+						<img  class="fragment fade-in" data-fragment-index="1" src="images/week-03/unit-30c.png">
+					</div>
+					<br/>
+				</section>
+
+				<section data-auto-animate>
+					<h3>The Unit Circle</h3>
+
+					<div class="r-stack" style="width: 700px;text-align: center;">
+						<img  class="fragment fade-out" data-fragment-index="0"  src="images/week-03/unit-45a.png">
+						<img  class="fragment fade-in-then-out" data-fragment-index="0" src="images/week-03/unit-45b.png">
+						<img  class="fragment fade-in" data-fragment-index="1" src="images/week-03/unit-45c.png">
+					</div>
+					<br/>
+				</section>
+
+				<section data-auto-animate>
+					<h3>The Unit Circle</h3>
+
+					<div class="r-stack" style="width: 700px;text-align: center;">
+						<img  class="fragment fade-out" data-fragment-index="0"  src="images/week-03/unit-60a.png">
+						<img  class="fragment fade-in" data-fragment-index="0" src="images/week-03/unit-60b.png">
+					</div>
+					<br/>
+				</section>
+				
+				<section data-auto-animate>
+					<h3>The Unit Circle</h3>
+
+					<div style="margin-top: -50px;">
+						<img style="width: 650px;" src="images/week-03/Unit_circle_angles.svg">
 					</div>
 				</section>
 				
