--- a/slides/1017scg/week-03.html
+++ b/slides/1017scg/week-03.html
@@ -304,22 +304,22 @@
 						<tr>
 							<td style="width: 50%;">
 
-								<div>
+								<div class="fragment" data-fragment-index="0">
 									<img style="width: 100%;" src="images/week-03/diagram-degrees.png">
 								</div>
 
-								<div style="text-align: center;font-size: 35px; margin-top: -30px;">
+								<div  class="fragment" data-fragment-index="0" style="text-align: center;font-size: 35px; margin-top: -30px;">
 									<p>Degrees</p>
 								</div>
 
 							</td>
 							<td style="width: 50%;">
 
-								<div>
+								<div class="fragment" data-fragment-index="1">
 									<img style="width: 100%;" src="images/week-03/diagram-radians.png">
 								</div>
 
-								<div style="text-align: center;font-size: 35px; margin-top: -30px;">
+								<div class="fragment" data-fragment-index="1" style="text-align: center;font-size: 35px; margin-top: -30px;">
 									<p>Radians</p>
 								</div>
 
@@ -331,7 +331,7 @@
 					<br />
 				</section>
 
-				<section>
+				<section data-auto-animate="">
 					<h4>How do we convert degrees to radians and vice versa?</h4>
 
 					<br />
@@ -340,8 +340,8 @@
 						<picture>
 							<source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f914/512.webp"
 								type="image/webp">
-							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f914/512.gif" alt="🤔" width="280"
-								height="280">
+							<img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f914/512.gif" alt="🤔" width="250"
+								height="250">
 						</picture>
 					</div>
 
@@ -350,7 +350,7 @@
 					<br />
 
 				</section>
-				<section>
+				<section data-auto-animate="">
 					<h4>How do we convert degrees to radians and vice versa?</h4>
 
 					<br />
@@ -376,19 +376,21 @@
 					<br />
 					<br />
 				</section>
-				<section>
+
+				<section data-auto-animate="">
 					<h4>How do we convert degrees to radians and vice versa?</h4>
 
 					<br />
 
 					<div class="r-stack">
 						<p class="fragment fade-out" data-fragment-index="0">\(\large 2\pi
-							\,\text{radians} = 360^{\circ} \text{degrees} \)</p>
+							\,\text{radians} = 360^{\circ} \)</p>
 						<p class="fragment fade-in-then-out" data-fragment-index="0">\(\large \dfrac{2\pi
 							}{2\pi}\,\text{radians} =
-							\dfrac{360 }{2\pi} \,\text{degrees}\)</p>
-						<p class="fragment fade-in" data-fragment-index="2">\(\large 1 \,\text{radian} =\dfrac{180}{\pi}
-							\,\text{degrees}
+							\dfrac{360^{\circ} }{2\pi} \)</p>
+						<p class="fragment fade-in-then-out" data-fragment-index="2">\(\large 1 \,\text{radian} =\dfrac{180^{\circ}}{\pi}
+							\)</p>
+						<p class="fragment fade-in" data-fragment-index="3">\(\large 1 \,\text{radian} =\dfrac{180}{\pi}\, \text{degrees}
 							\)</p>
 					</div>
 
@@ -406,7 +408,7 @@
 				</section>
 
 
-				<section>
+				<section data-auto-animate>
 					<h4>How do we convert degrees to radians and vice versa?</h4>
 
 					<div>
@@ -432,7 +434,7 @@
 					<br />
 				</section>
 
-				<section>
+				<section data-auto-animate>
 					<h4>How do we convert degrees to radians and vice versa?</h4>
 
 					<div class="left-txt size-80">
@@ -464,7 +466,7 @@
 					<br />
 				</section>
 
-				<section>
+				<section data-auto-animate>
 					<h4>How do we convert degrees to radians and vice versa?</h4>
 
 					<div class="left-txt size-80">
@@ -495,7 +497,7 @@
 					<br />
 				</section>
 
-				<section>
+				<section data-auto-animate>
 					<h4>How do we convert degrees to radians and vice versa?</h4>
 
 					<div class="left-txt size-80">
@@ -527,7 +529,7 @@
 					<br />
 				</section>
 
-				<section>
+				<section data-auto-animate>
 					<h4>How do we convert degrees to radians and vice versa?</h4>
 
 					<div class="left-txt size-80">
@@ -558,7 +560,8 @@
 					<br />
 					<br />
 				</section>
-				<section>
+				
+				<section data-auto-animate>
 					<h4>How do we convert degrees to radians and vice versa?</h4>
 
 					<div class="left-txt size-80">
