--- a/slides/1017scg/week-03.html
+++ b/slides/1017scg/week-03.html
@@ -560,7 +560,7 @@
 					<br />
 					<br />
 				</section>
-				
+
 				<section data-auto-animate>
 					<h4>How do we convert degrees to radians and vice versa?</h4>
 
@@ -648,7 +648,7 @@
 			</section>
 
 			<section>
-				<section>
+				<section data-auto-animate>
 					<h3>Special Triangles</h3>
 
 					<table style="width: 100%;">
@@ -664,7 +664,7 @@
 						</tr>
 					</table>
 				</section>
-				<section>
+				<section data-auto-animate>
 					<h3>Special Triangles</h3>
 
 					<table style="width: 100%;">
@@ -681,7 +681,7 @@
 					</table>
 				</section>
 
-				<section>
+				<section data-auto-animate>
 					<h3>Special Triangles</h3>
 
 					<table style="width: 100%;">
@@ -739,24 +739,25 @@
 					</div>
 					<br />
 				</section>
-				<section>
+				<section data-auto-animate>
 					<h3>Special Triangles</h3>
 
 					<table style="width: 100%;">
 						<tr>
-							<td style="width: 30%;">
-								<img src="images/week-03/special-triangles-01-degrees.png">
+							<td style="width: 40%; text-align: center;">
+								<img style="width: 250px;" src="images/week-03/special-triangles-01-degrees.png">
+
+								<img style="width: 250px;"  src="images/week-03/special-triangles-01-radians.png">
 
 							</td>
-							<td style="width: 30%;">
-								<img src="images/week-03/special-triangles-01-radians.png">
-
-							</td>
-							<td style="width: 40%; font-size: 85%;">
+							<td style="width: 60%; font-size: 85%;">
 								<p class="fragment" data-fragment-index="0">
 									\(\sin \left(\dfrac{\pi}{2}\right)\)
 									<span class="fragment" data-fragment-index="1">
 										\(=\dfrac{1}{\sqrt{2}}\)
+									</span>
+									<span class="fragment" data-fragment-index="7">
+										\(=\dfrac{\sqrt{2}}{2}\)
 									</span>
 								</p>
 								<p class="fragment" data-fragment-index="2">
@@ -764,13 +765,22 @@
 									<span class="fragment" data-fragment-index="3">
 										\(=\dfrac{1}{\sqrt{2}}\)
 									</span>
+									<span class="fragment" data-fragment-index="8">
+										\(=\dfrac{\sqrt{2}}{2}\)
+									</span>
 								</p>
 								<p class="fragment" data-fragment-index="4">
 									\(\tan \left(\dfrac{\pi}{2}\right)\)
 									<span class="fragment" data-fragment-index="5">
 										\(=\dfrac{1}{1} \)
 									</span>
+									<span class="fragment" data-fragment-index="6">
+										\(=1 \)
+									</span>
 								</p>
+								<br/>
+								<br/>
+								<br/>
 							</td>
 						</tr>
 					</table>
@@ -780,7 +790,7 @@
 					<br />
 				</section>
 
-				<section>
+				<section data-auto-animate>
 					<h3>Special Triangles</h3>
 
 					<div class="size-65">
@@ -790,11 +800,11 @@
 					<table style="width: 65%;border: none;margin-top: -30px;">
 						<tr>
 							<td style="width: 50%; text-align: center;border: none;">
-								<img style="width: 200px;" src="images/week-03/special-triangles-01-degrees.png">
+								<img style="width: 240px;" src="images/week-03/special-triangles-01-degrees.png">
 
 							</td>
 							<td style="width: 50%; text-align: center;border: none;">
-								<img style="width: 200px;" src="images/week-03/special-triangles-01-radians.png">
+								<img style="width: 240px;" src="images/week-03/special-triangles-01-radians.png">
 
 							</td>
 						</tr>
@@ -804,18 +814,19 @@
 
 						<tr>
 							<td style="width: 50%; text-align: center;">
-								<img style="width: 230px;" src="images/week-03/special-triangles-02-degrees.png">
+								<img style="width: 270px;" src="images/week-03/special-triangles-02-degrees.png">
 
 							</td>
 							<td style="width: 50%; text-align: center;">
-								<img style="width: 230px;" src="images/week-03/special-triangles-02-radians.png">
+								<img style="width: 270px;" src="images/week-03/special-triangles-02-radians.png">
 
 							</td>
 						</tr>
 					</table>
 
+					<br/>
 				</section>
-				<section>
+				<section data-auto-animate>
 					<h3>Special Triangles</h3>
 
 					<div class="size-90">
@@ -1006,10 +1017,10 @@
 			<section>
 				<h3>What is next?</h3>
 
-				<div class="left-txt size-80">
-					<ul>
-						<li class="fragment" data-fragment-index="0">Watch the fifth video on Canvas site. 
-							<br/>Topic: "Like and Unlike Terms"</li>
+				<div class="left-txt size-90">
+					<ul style="line-height: 60px;">
+						<li class="fragment" data-fragment-index="0">Watch the fifth video on Canvas site:
+						<br/>	 "Like and Unlike Terms".</li>
 						<li class="fragment" data-fragment-index="1">Prepare for Progress Test 1.</li>
 						<li class="fragment" data-fragment-index="2">Watch the week 4 video content before your scheduled week 4 workshop.</li>
 					</ul>
